Doing requests using web and filtering null fields in ItemsData

--- a/web-main/index.html
+++ b/web-main/index.html
@@ -6,6 +6,19 @@
     <title>Bookshelf</title>
 </head>
 <body>
-    
+    <main>
+        <section data-name="search" class="section">
+            <h1>Search</h1>
+            <form action="">
+                <label for="name">Enter a book name</label>
+                <input type="text" name="name" id="name"><br>
+                <input type="submit" value="submit">
+            </form>
+        </section>
+        <section data-name="myshelf" class="section">
+            <h1>My personal shelf</h1>
+        </section>
+    </main>
+    <script src="./scripts/index.js" type="module"></script>
 </body>
 </html>
