Making CSS and getting the json from the current book at details.html

--- a/web-main/details.html
+++ b/web-main/details.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Book Details</title>
+    <link rel="stylesheet" href="css/styledetails.css">
 </head>
 <body>
-    <h1>Details</h1>
+    <header>
+        <h1>Spring Web Bookshelf</h1>
+        <a href="index.html"><img src="img/back-button.png" alt="Back button"></a>
+    </header>
 
     <main>
+        <h1>Details</h1>
         <section id="book-sheet"></section>
+        <button id="showBookButton">Show Current Book</button>
     </main>
 
     <script src="./scripts/bookinfo.js" type="module"></script>
