--- a/web-main/index.html
+++ b/web-main/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookshelf</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main>
-        <section data-name="search" class="section">
-            <h1>Search</h1>
+        <header>
+            <h1>Spring Web Bookshelf</h1>
             <form action="">
-                <label for="name">Enter a book name</label>
-                <input type="text" name="name" id="name"><br>
-                <input type="submit" value="submit">
+                <input type="text" name="name" id="name" placeholder="Enter a book name"><br>
+                <button type="submit" class="btn"><img src="img/search.png" alt=""></button>
             </form>
+        </header>
+        <section data-name="search" class="hidden section">
+            <h2>Search Result</h2>
+            
         </section>
         <section data-name="myshelf" class="section">
-            <h1>My personal shelf</h1>
+            <h2>My personal shelf</h2>
         </section>
     </main>
     <script src="./scripts/index.js" type="module"></script>
