CSS details.html + POST request to DB

--- a/web-main/details.html
+++ b/web-main/details.html
@@ -14,8 +14,10 @@
 
     <main>
         <h1>Details</h1>
-        <section id="book-sheet"></section>
-        <button id="showBookButton">Show Current Book</button>
+        <section class="container">
+            <section id="book-sheet"></section>
+            <button id="addBookToShelf">Add current book to personal shelf</button>
+        </section>
     </main>
 
     <script src="./scripts/bookinfo.js" type="module"></script>
