Getting the books from postgres

--- a/web-main/index.html
+++ b/web-main/index.html
@@ -17,10 +17,10 @@
         </header>
         <section data-name="search" class="hidden section">
             <h2>Search Result</h2>
-            
         </section>
         <section data-name="myshelf" class="section">
             <h2>My personal shelf</h2>
+            <select data-author class="hidden"></select>
         </section>
     </main>
     <script src="./scripts/index.js" type="module"></script>
