--- a/web-main/search_details.html
+++ b/web-main/search_details.html
@@ -16,9 +16,10 @@
         <h1>Details</h1>
         <section class="container">
             <section id="book-sheet"></section>
+            <button id="addBookToShelf">Add current book to personal shelf</button>
         </section>
     </main>
 
-    <script src="./scripts/bookInShelf.js" type="module"></script>
+    <script src="./scripts/bookSearch.js" type="module"></script>
 </body>
 </html>
