--- a/web-main/index.html
+++ b/web-main/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookshelf</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <main>
         <header>
-            <h1>Spring Web Bookshelf</h1>
+            <h1><a href="index.html">Spring Web Bookshelf</a></h1>
             <form action="">
                 <input type="text" name="name" id="name" placeholder="Enter a book name">
                 <button type="submit" class="btn"><img src="img/search.png" alt=""></button>
             </form>
         </header>
-        <section class="hidden section" id="search">
-            <h2>Search Result</h2>
-            <section data-name="search" class="book-list"></section>
-        </section>
+        <section data-name="search" class="section book-list"></section>
         <section class="section">
-            <h2>My personal shelf</h2>
-            <select data-author class="hidden"></select>
+            <div class="shelf_header">
+                <h2>My personal shelf</h2>
+                <select data-author class="hidden"></select>
+            </div>
             <section data-name="myshelf" class="book-list"></section>
             <section data-name="author"></section>
         </section>
     </main>
     <script src="./scripts/index.js" type="module"></script>
 </body>
+
 </html>
