--- a/web-main/search_details.html
+++ b/web-main/search_details.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Spring Web Bookshelf</h1>
+        <h1><a href="index.html">Spring Web Bookshelf</a></h1>
         <a href="index.html"><img src="img/back-button.png" alt="Back button"></a>
     </header>
 
