Making review code and ajusting html

--- a/web-main/details.html
+++ b/web-main/details.html
@@ -16,6 +16,10 @@
         <h1>Details</h1>
         <section class="container">
             <section id="book-sheet"></section>
+            <section class="review">
+                <section id="review-list"></section>
+                <button id="addReview">Add personal review</button>
+            </section>
         </section>
     </main>
 
