Adding delete book button in index.html

--- a/web-main/details.html
+++ b/web-main/details.html
@@ -33,7 +33,7 @@
                             <label for="message">Your Comment</label>
                             <textarea id="message" placeholder="Type here" required></textarea>
                         </div>
-                        <button type="submit">Send Message</button>
+                        <button type="submit">Send Review</button>
                     </form>
                 </div>
             </section>
