feat: login page + refactor .css and index.html

--- a/web-main/index.html
+++ b/web-main/index.html
@@ -16,7 +16,15 @@
                 <input type="text" name="name" id="name" placeholder="Enter a book name">
                 <button type="submit" class="btn"><img src="img/search.png" alt=""></button>
             </form>
+            <div class="account">
+                <a href="account.html" id="login">Log-In</a>
+                <a href="account.html" id="register">Register</a>
+                <div class="logged">a</div>
+            </div>
         </header>
+
+
+        
         <section data-name="search" class="section book-list"></section>
         <section class="section">
             <div class="shelf_header">
@@ -28,6 +36,7 @@
         </section>
     </main>
     <script src="./scripts/index.js" type="module"></script>
+    <script src="./scripts/account.js"></script>
 </body>
 
 </html>
